test(game-session): add session integration test coverage
- added full-stack session integration tests with WireMock-backed Game Engine stubs
- added fixtures for create, get, simulate, error handling, and draw simulation scenarios
- added integration test configuration and test dependencies